# image-editor-team

./: .gitignore  CMakeLists.txt  Dockerfile.txt
.github/workflows/: ci.yml
src/: filters.cpp  filters.h  image_processor.cpp  image_processor.h  main.cpp
tests/: test_filters.cpp
